--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,27 +3,18 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
-            app:startDestination="@id/HomeFragment">
-
-    <fragment
-            android:id="@+id/HomeFragment"
-            android:name="com.example.galacticore.HomeFragment"
-            android:label="@string/Home_fragment_label"
-            tools:layout="@layout/fragment_home">
-
-        <action
-                android:id="@+id/action_FirstFragment_to_addTransactionFragment"
-                app:destination="@id/addTransactionFragment" />
+            app:startDestination="@id/loginFragment">
+    <fragment android:id="@+id/loginFragment" android:name="com.example.galacticore.LoginFragment"
+              android:label="fragment_login" tools:layout="@layout/fragment_login">
+        <action android:id="@+id/action_loginFragment_to_homeFragment" app:destination="@id/homeFragment"/>
     </fragment>
-
-    <fragment
-            android:id="@+id/addTransactionFragment"
-            android:name="com.example.galacticore.AddTransactionFragment"
-            android:label="@string/add_transaction_fragment_label"
-            tools:layout="@layout/fragment_add_transaction">
-
-        <action
-                android:id="@+id/action_addTransactionFragment_to_HomeFragment"
-                app:destination="@id/HomeFragment" />
+    <fragment android:id="@+id/homeFragment" android:name="com.example.galacticore.HomeFragment"
+              android:label="fragment_home" tools:layout="@layout/fragment_home">
+        <action android:id="@+id/action_homeFragment_to_addTransactionFragment"
+                app:destination="@id/addTransactionFragment"/>
+    </fragment>
+    <fragment android:id="@+id/addTransactionFragment" android:name="com.example.galacticore.AddTransactionFragment"
+              android:label="fragment_add_transaction" tools:layout="@layout/fragment_add_transaction">
+        <action android:id="@+id/action_addTransactionFragment_to_homeFragment" app:destination="@id/homeFragment"/>
     </fragment>
 </navigation>
