--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,14 +80,13 @@
         <!-- Main Content Card -->
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="650dp"
                 app:cardCornerRadius="30dp"
                 app:cardBackgroundColor="@color/backDropMain_darkGrey"
                 android:id="@+id/cardView_mainBackdrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="150dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -127,7 +126,9 @@
                         app:cardElevation="5dp"
                         android:id="@+id/cardView_monthlyInfoBackdrop"
                         app:layout_constraintTop_toBottomOf="@+id/textView_goalNumber"
-                        android:layout_marginTop="20dp">
+                        android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
+                        app:layout_constraintEnd_toEndOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
@@ -202,13 +203,14 @@
                 <!-- Daily Info and Transactions List -->
                 <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="330dp"
                         app:cardCornerRadius="15dp"
-                        app:cardElevation="5dp"
+                        app:cardElevation="11dp"
                         app:layout_constraintTop_toBottomOf="@+id/cardView_monthlyInfoBackdrop"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginTop="16dp"
-                        android:id="@+id/cardView_dailyInfoBackdrop">
+                        android:id="@+id/cardView_dailyInfoBackdrop" app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
+                        app:layout_constraintEnd_toEndOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
