--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,36 +13,85 @@
 
         <ImageView
                 android:src="@drawable/star"
-                android:alpha="0.7"
-                android:layout_width="15dp"
-                android:layout_height="18dp"
                 android:id="@+id/star1_home"
+                android:alpha="0.7"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="228dp"/>
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="212dp" android:rotation="-21"/>
 
         <ImageView
                 android:src="@drawable/star"
-                android:alpha="0.7"
-                android:layout_width="15dp"
-                android:layout_height="18dp"
                 android:id="@+id/star2_home"
+                android:alpha="0.7"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="52dp"
-                android:layout_marginStart="24dp"/>
-
+                android:layout_marginTop="88dp"
+                android:layout_marginStart="8dp" android:rotation="-17"/>
         <ImageView
                 android:src="@drawable/star"
-                android:alpha="0.7"
-                android:layout_width="15dp"
-                android:layout_height="18dp"
                 android:id="@+id/star3_home"
+                android:alpha="0.7"
+                android:layout_width="13dp"
+                android:layout_height="13dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="100dp"
-                android:layout_marginStart="68dp"/>
+                android:layout_marginTop="104dp"
+                android:layout_marginStart="156dp" android:rotation="15"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:id="@+id/star4_home"
+                android:alpha="0.7"
+                android:layout_width="8dp"
+                android:layout_height="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="92dp"
+                android:layout_marginStart="244dp" android:rotation="26"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:id="@+id/star5_home"
+                android:alpha="0.7"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="48dp" android:rotation="17"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:id="@+id/star6_home"
+                android:alpha="0.7"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="88dp"
+                android:layout_marginStart="92dp"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:id="@+id/star7_home"
+                android:alpha="0.7"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="-9dp"
+                android:layout_marginStart="108dp" android:rotation="26"/>
+        <ImageView
+                android:src="@drawable/star"
+                android:id="@+id/star8_home"
+                android:alpha="0.7"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="44dp"
+                android:layout_marginStart="156dp" android:rotation="17"/>
         <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
@@ -53,6 +102,7 @@
                 android:layout_marginEnd="-15dp"
                 android:layout_marginTop="-20dp"/>
 
+        <!-- Goal Progress Bar -->
         <ImageView
                 android:src="@drawable/rocket_fly_icon"
                 android:layout_width="42dp"
@@ -60,11 +110,9 @@
                 android:id="@+id/rocket_home"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="104dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginStart="84dp"
+                android:layout_marginTop="20dp"
                 android:rotation="90"/>
-
-        <!-- Goal Progress Bar -->
         <ProgressBar
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="350dp"
