--- a/app/src/main/res/values/Values.xml
+++ b/app/src/main/res/values/Values.xml
@@ -9,14 +9,15 @@
     <color name="bg_light">#663B8B</color>
     <color name="bg_dark">#221734</color>
 
+    // current goal
     <color name="txt_lightPink">#FA8D93</color>
     <color name="txt_darkPink">#FC489C</color>
-
+    // home page backdrop
     <color name="backDropMain_darkGrey">#F0F0F0</color>
-
+    // navigation bar
     <color name="navigationBar_grey">#D9D9D9</color>
     <color name="navigationIcon_pink">#C647BF</color>
-
+    // home page transaction
     <color name="positive_color">#22A600</color>
     <color name="negative_color">#A60000</color>
 
