--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,20 @@
             app:menu="@menu/bottom_nav_menu"
             android:background="@color/navigationBar_grey">
     </com.google.android.material.bottomnavigation.BottomNavigationView>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <TextView
             android:id="@+id/newTransaction_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/add_new_transaction"
-            app:srcCompat="@android:drawable/ic_input_add"
+            android:text="+"
+            android:textSize="25sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:gravity="center"
+            android:background="@drawable/bnt_add_transaction"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="176dp" app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+            app:layout_constraintHorizontal_bias="0.498"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
