--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -93,6 +93,16 @@
                 android:layout_marginTop="44dp"
                 android:layout_marginStart="156dp" android:rotation="17"/>
         <ImageView
+                android:src="@drawable/star"
+                android:id="@+id/star9_home"
+                android:alpha="0.7"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="216dp"
+                android:layout_marginStart="356dp" android:rotation="17"/>
+        <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
                 android:layout_height="215dp"
