--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,8 +40,8 @@
                 android:layout_height="13dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="104dp"
-                android:layout_marginStart="156dp" android:rotation="15"/>
+                android:layout_marginTop="536dp"
+                android:layout_marginStart="376dp" android:rotation="15"/>
         <ImageView
                 android:src="@drawable/star"
                 android:id="@+id/star4_home"
@@ -55,7 +55,7 @@
         <ImageView
                 android:src="@drawable/star"
                 android:id="@+id/star5_home"
-                android:alpha="0.7"
+                android:alpha="0.3"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -90,8 +90,8 @@
                 android:layout_height="18dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="44dp"
-                android:layout_marginStart="156dp" android:rotation="17"/>
+                android:layout_marginTop="416dp"
+                android:layout_marginStart="376dp" android:rotation="17"/>
         <ImageView
                 android:src="@drawable/star"
                 android:id="@+id/star9_home"
@@ -130,8 +130,8 @@
                 android:layout_height="18dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="584dp"
-                android:layout_marginStart="244dp" android:rotation="57"/>
+                android:layout_marginTop="452dp"
+                android:layout_marginStart="16dp" android:rotation="57"/>
         <ImageView
                 android:src="@drawable/star"
                 android:id="@+id/star13_home"
@@ -170,8 +170,8 @@
                 android:layout_height="21dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="580dp"
-                android:layout_marginStart="312dp" android:rotation="97"/>
+                android:layout_marginTop="664dp"
+                android:layout_marginStart="16dp" android:rotation="97"/>
         <ImageView
                 android:src="@drawable/moon_icon"
                 android:layout_width="174dp"
@@ -194,19 +194,8 @@
                 android:textSize="34sp"
                 android:id="@+id/congrats_text"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="90dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="80dp" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
-        <ImageView
-                android:src="@drawable/rocket_rest"
-                android:layout_width="42dp"
-                android:layout_height="100dp"
-                android:id="@+id/rocket_rest"
-                android:alpha="1"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="84dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="180dp"
-                android:rotation="-35"/>
         <ImageView
                 android:src="@drawable/rocket_fly_icon"
                 android:layout_width="42dp"
@@ -231,6 +220,59 @@
                 android:progressBackgroundTint="#B100A7"/>
 
         <!-- Main Content Card -->
+        <androidx.cardview.widget.CardView
+                android:layout_width="334dp"
+                android:layout_height="160dp"
+                app:cardCornerRadius="10dp"
+                android:alpha="1"
+                app:cardBackgroundColor="@color/backDropMain_darkGrey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="83dp"
+                android:id="@+id/warning_dialog"
+                app:layout_constraintHorizontal_bias="0.5">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <TextView
+                        android:text="Reset your current goal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/reset_goal"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+                <Button
+                        android:text="Confirm"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:id="@+id/reset_confirm"
+                        android:backgroundTint="@color/pink"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="120dp"
+                        android:layout_marginEnd="120dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="2dp" app:layout_constraintTop_toBottomOf="@+id/reset_number"/>
+                <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:inputType="number"
+                        android:ems="10"
+                        android:textAlignment="center"
+                        android:hint="New Goal"
+                        android:id="@+id/reset_number"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/reset_goal"
+                        android:layout_marginTop="15dp"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="680dp"
@@ -405,6 +447,17 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+        <ImageView
+                android:src="@drawable/rocket_rest"
+                android:layout_width="42dp"
+                android:layout_height="100dp"
+                android:alpha="1"
+                android:id="@+id/rocket_rest"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="188dp"
+                android:layout_marginStart="80dp"
+                android:rotation="-30"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
